# attestation

./: .env.template  .gitignore  README.md  attestation.postman_collection.json  pyproject.toml
config/: settings.py  urls.py
electronics/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
electronics/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: add_users.py  csu.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username.py
